--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 				<p>Mary's jewelry has received recognition, and been featured in the National Museum of the American Indian, The New York Times Style Magazine, and Sedona Monthly. The collection been has sold across the United States and Europe and been carried by the retail stores of Bergdorf Goodman.</p>
 
-			</section><!-- #featured -->
+			</section>
 
 			<section id="press">
 
@@ -41,12 +41,12 @@
 
 				<a href="http://www.bergdorfgoodman.com/" target="_blank"><img src="images/bergdorf-logo.png" alt="Begdorf Goodman"></a>
 
-			</section><!-- #press-->
+			</section>
 
 			<footer>
 				<p class="small">&copy; 2014 Zetsy, All Rights Reserved.</p>
 			</footer>
 
-		</div><!-- .wrapper -->
+		</div>
 	</body>
 </html>
